fix horizontal overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@ body,
 
 body {
   margin: 0px;
+  overflow-x: hidden;
 }
 
 div[role="group"][tabindex] {
